# projects

./: .buildinfo  CNAME  CONTRIBUTING.md  Current_Projects.html  LICENSE  README.md  Resources.html  content.html  genindex.html  intro.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy.yml
AI_Safety/: AI_Safety.html  Project5.html
Basic_Skills/: Basic_Skills.html  Project1.html  Project2.html  Project3.html  Project4.html
Evolutionary/: Evolutionary.html  Project6.html
Past_Projects/: Past_Projects.html
Workshops/: Comfyui_Google_colab.ipynb  comfyui_colab.ipynb
_sources/: Current_Projects.md  Resources.md  intro.md
_sources/Basic_Skills/: Basic_Skills.md  Project3.md  Project4.md
_sources/Evolutionary/: Project6.md
_sources/Past_Projects/: Past_Projects.md
_sources/wai102/: gradients.md  overview.md  wai102.md
education/: _config.yml  _toc.yml
education/wai102/: gradients.ipynb  gradients.md  nn.md  wai102.md
project_files/Project1/: Project 1.ipynb  property_data.csv
projects/: _config.yml  _toc.yml
projects/AI_Safety/: AI_Safety.md  Project5.md
projects/Basic_Skills/: Project1.md  Project2.md  Project3.md
projects/Evolutionary/: Evolutionary.md  Project6.md
projects/Past_Projects/: Past_Projects.md
projects/wai102/: backpropagation.md  overview.md
wai102/: backpropagation.html  first_steps.html  grad.html  gradients.html  nn.html  overview.html  wai102.html
