[tool.poetry]
name = "education"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter-book = "^0.13.1"
matplotlib = "^3.6.0"
numpy = "^1.23.3"
ghp-import = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
